  - The AI will be more likely to invade you for defaults on higher difficulty
  - Further reduced the importance of Strategic Bombing for the AI so it stops being stupid
  - Blocked the Greek AI from unifying Cyprus on historical focus mode

 Balance:
  - Increased the penalties for taking the "Nuclear Power (Offensive)"
  - Increased the cost of Enosis for the Greek decision from 50 to 150

 Bugfix:
  - Fixed the Italian focus "Relinquish Power to the Pope" not properly transferring subjects to the Holy See
  - Fixed being able to send yourself "Bailouts" if you have somehow become an influencer of yourself

 Content:
  - NEW FOCUS TREE: Netherlands
  - REWORKED/IMPROVED: Singapore
  - Influence Economic Aid now no longer requires you to be a top 7 influencer and you can send aid to other countries
  - Moved the political power costs for the Greek decisions from the effect to the cost trigger so they actually show their cost
  - Reworked the Arab Spring mechanics to be more robust and enjoyable to play

v1.12.0d

 AI:
   - The AI should now actually deploy planes when at war with the United States (China and Russia were the worst offenders.)

 Balance:
  - Increased the benefit of the "Improve Local Infrastructure" internal investment from 15% to 20% for all infrastructure types
  - By default you can no longer sending investments to countries while you have the "Bankruptcy Incoming" mission active
  - Added requirement for Transnistria to be independent to complete focuses with wargoals to prevent early WWIII from happeneing
  - Command Power has replaced Army Experience in the PKK mechanic for Turkey

  Bugfix:
   - Fixed the broken display for the "Storm the Tulkarm Fort" decision not showing up with the right information
   - Fixed the Israel "The Passover Massacre" operations when failed Gaza Strip becomes overlord of Israel and instead changed it so that Israel becomes the overlord over the Gaza strip