@@ -74,16 +74,14 @@ arab_spring_category = {
 	arab_spring_request_crackdown = {
 		icon = GFX_decision_generic_tank
 
+		days_remove = 21
+		cost = 50
+
 		visible = {
 			has_country_flag = arab_spring_active
 			has_idea = idea_gcc_member_state
 			NOT = { has_country_flag = gcc_dominant_member }
 		}
-
-		cost = 25
-
-		days_remove = 7
-
 
 		remove_effect = {
 			log = "[GetDateText]: [This.GetName]: decision arab_spring_request_crackdown executed"
