@@ -221,6 +221,12 @@ GRE_CYP_category = {
 				check_variable = { 146.GRE_SUPPORT < 50 }
 				check_variable = { 145.GRE_SUPPORT > 90 }
 			}
+			modifier = {
+				factor = 2
+				has_equipment = {
+					infantry_weapons > 999
+				}
+			}
 		}
 	}
 	###########CYPRUS CONFLICT - GREECE PROPAGANDA NORTH CYPRIOTS###########
@@ -257,12 +263,9 @@ GRE_CYP_category = {
 			custom_effect_tooltip = GRE_turks_lose_5_strength
 			add_to_variable = { 145.GRE_SUPPORT = 5 }
 			add_to_variable = { 146.GRE_SUPPORT = -5 }
-			clamp_variable = {
-				var = 146.GRE_SUPPORT
-				min = 0
-				max = 100
-			}
+			clamp_variable = { var = 146.GRE_SUPPORT min = 0 max = 100 }
 		}
+
 		ai_will_do = {
 			base = 3
 			modifier = {
@@ -275,6 +278,7 @@ GRE_CYP_category = {
 			}
 		}
 	}
+
 	###########CYPRUS CONFLICT - GREECE INCREASE CYPRIOTS###########
 	GRE_attack_turkish_strength = {
 		allowed = { original_tag = GRE }
