@@ -918,6 +918,27 @@ rule_enable_investment_collapse_lock = {
 	}
 }
 
+rule_syria_arab_spring_choice = {
+	name = "RULE_SYRIA_ARAB_SPRING_CHOICE"
+	group = "MD_RULES"
+	icon = "GFX_production_licenses"
+	default = {
+		name = default
+		text = "RULE_OPTION_DEFAULT"
+		desc = "RULE_SYRIA_ARAB_SPRING_CHOICE_DEFAULT_DESC"
+	}
+	option = {
+		name = historical_civil_war
+		text = "RULE_OPTION_HISTORICAL_CIVIL_WAR"
+		desc = "RULE_SYRIA_ARAB_SPRING_CHOICE_HISTORICAL_CIVIL_WAR_DESC"
+	}
+	option = {
+		name = historical_isis_spawn
+		text = "RULE_OPTION_HISTORICAL_ISIS_SPAWN"
+		desc = "RULE_SYRIA_ARAB_SPRING_CHOICE_HISTORICAL_ISIS_SPAWN_DESC"
+	}
+}
+
 # CHEATS
 allow_cheat_decisions = {
 	name = "RULE_ALLOW_CHEAT_DECISIONS"
