@@ -7,10 +7,30 @@ ideas = {
 			modifier = {
 				war_stability_factor = 0.25
 				army_core_attack_factor = 0.10
-				army_core_defence_factor = 0.10
-				equipment_capture = 0.10
-				fascism_drift = 0.50
+				army_core_defence_factor = 0.15
+				equipment_capture = 0.15
+				fascism_drift = 1.0
 				fascism_acceptance = 100
+			}
+		}
+
+		ISI_islamic_state_early_offensive_idea = {
+			picture = manpower_bonus
+
+			modifier = {
+				army_core_attack_factor = 0.15
+				army_morale_factor = 0.15
+				breakthrough_factor = 0.15
+			}
+		}
+
+		ISI_islamic_state_failure_idea = {
+			picture = disorganized_army
+
+			targeted_modifier = {
+				tag = ISI
+				attack_bonus_against = -0.15
+				defense_bonus_against = -0.15
 			}
 		}
 	}
