@@ -1824,19 +1824,13 @@ ideas = {
 		   }
 		}
 		syria_encouraging_economic_self_reliance = {
-			on_add = { log = "[GetDateText]: [Root.GetName]: add idea syria_encouraging_economic_self_reliance" }
-
-
-			allowed_civil_war = {
-				always = no
-			}
-
 			picture = "army_good_officer"
+			allowed_civil_war = { always = no }
 
 			modifier = {
 				political_power_cost = 0.2
 				country_productivity_growth_modifier = 0.15
-		   }
+			}
 		}
 		syria_encouraging_state_decision_making = {
 			on_add = { log = "[GetDateText]: [Root.GetName]: add idea syria_encouraging_state_decision_making" }
@@ -1913,7 +1907,16 @@ ideas = {
 				conscription = 0.05
 		   }
 		}
+
+		# Free Syrian Army Ideas
+		FSA_rebel_fighting_spirit_idea = {
+			picture = "army_good_officer"
+
+			modifier = {
+				surrender_limit = 0.20
+				army_core_attack_factor = 0.15
+				army_core_defence_factor = 0.15
+			}
+		}
 	}
-
-
 }
