@@ -1476,7 +1476,7 @@ on_actions = {
 				set_global_flag = GAME_RULE_rule_disable_ai_debt_war
 			}
 
-			# Disable the AI from using the "Freedom" Continous Focus
+			# Disable the AI from using the "Freedom" Continuous Focus
 			if = {
 				limit = {
 					has_game_rule = {
@@ -1485,6 +1485,26 @@ on_actions = {
 					}
 				}
 				set_global_flag = GAME_RULE_rule_disable_using_freedom_cont_focus
+			}
+
+			# Syria Arab Spring Historical Option
+			if = {
+				limit = {
+					has_game_rule = {
+						rule = rule_syria_arab_spring_choice
+						option = historical_civil_war
+					}
+				}
+				set_global_flag = GAME_RULE_guarantee_syrian_historical_as_civil_war
+			}
+			if = {
+				limit = {
+					has_game_rule = {
+						rule = rule_syria_arab_spring_choice
+						option = historical_isis_spawn
+					}
+				}
+				set_global_flag = GAME_RULE_guarantee_islamic_state_spawn
 			}
 
 			# Volunteers
