@@ -2662,4 +2662,26 @@ on_actions = {
 			150 = greece.22
 		}
 	}
+
+	# Nigeria
+	on_weekly_NIG = {
+		effect = {
+			if = { limit = { has_active_mission = NIG_religious_civil_war_mission }
+
+				if = {
+					limit = {
+						322 = { NIG_has_been_converted = yes }
+						337 = { NIG_has_been_converted = yes }
+						336 = { NIG_has_been_converted = yes }
+						334 = { NIG_has_been_converted = yes }
+						340 = { NIG_has_been_converted = yes }
+						338 = { NIG_has_been_converted = yes }
+						339 = { NIG_has_been_converted = yes }
+						332 = { NIG_has_been_converted = yes }
+					}
+					set_country_flag = NIG_has_converted_everything
+				}
+			}
+		}
+	}
 }
