@@ -200,6 +200,7 @@ AS_spawn_isis_into_game = {
 		release = ISI
 		192 = { add_core_of = SYR }
 		ISI = {
+			ingame_startup_nations_effect = yes
 			every_state = {
 				limit = {
 					OR = {
@@ -218,43 +219,116 @@ AS_spawn_isis_into_game = {
 				load_oob = ISI_2017_nonnsb
 			}
 
-			if = { limit = { country_exists = FSA }
+			add_timed_idea = {
+				idea = ISI_islamic_state_early_offensive_idea
+				days = 180
+			}
+
+			IRQ = {
+				add_timed_idea = {
+					idea = ISI_islamic_state_failure_idea
+					days = 90
+				}
+			}
+			SYR = {
+				add_timed_idea = {
+					idea = ISI_islamic_state_failure_idea
+					days = 180
+				}
+			}
+
+			capital_scope = {
+				create_unit = {
+					division = "name = \"Liwa Milisha\" division_template = \"Liwa Milisha\" start_experience_factor = 0.9"
+					prioritize_location = 6312
+					owner = ISI
+					count = 3
+				}
+				if = {
+					limit = { difficulty > 2 }
+					create_unit = {
+						division = "name = \"Liwa Milisha\" division_template = \"Liwa Milisha\" start_experience_factor = 0.9"
+						prioritize_location = 631
+						owner = ISI
+						count = 3
+					}
+				}
+				if = {
+					limit = { difficulty > 3 }
+					create_unit = {
+						division = "name = \"Liwa Milisha\" division_template = \"Liwa Milisha\" start_experience_factor = 0.9"
+						prioritize_location = 631
+						owner = ISI
+						count = 3
+					}
+				}
+			}
+
+			if = {
+				limit = {
+					country_exists = FSA
+					NOT = { has_war_with = FSA }
+				}
 				declare_war_on = {
 					target = FSA
 					type = annex_everything
 				}
 			}
-			if = { limit = { country_exists = NUS }
+			if = {
+				limit = {
+					country_exists = NUS
+					NOT = { has_war_with = NUS }
+				}
 				declare_war_on = {
 					target = NUS
 					type = annex_everything
 				}
 			}
-			if = { limit = { country_exists = ROJ }
+			if = {
+				limit = {
+					country_exists = ROJ
+					NOT = { has_war_with = ROJ }
+				}
 				declare_war_on = {
 					target = ROJ
 					type = annex_everything
 				}
 			}
-			if = { limit = { country_exists = SYR }
+			if = {
+				limit = {
+					country_exists = SYR
+					NOT = { has_war_with = SYR }
+				}
 				declare_war_on = {
 					target = SYR
 					type = annex_everything
 				}
 			}
-			if = { limit = { country_exists = IRQ }
+			if = {
+				limit = {
+					country_exists = IRQ
+					NOT = { has_war_with = IRQ }
+				}
 				declare_war_on = {
 					target = IRQ
 					type = annex_everything
 				}
 			}
-			if = { limit = { country_exists = KUR }
+			if = {
+				limit = {
+					country_exists = KUR
+					NOT = { has_war_with = KUR }
+				}
 				declare_war_on = {
 					target = KUR
 					type = annex_everything
 				}
 			}
-			if = { limit = { country_exists = PUK }
+			if = {
+				limit = {
+					country_exists = PUK
+					NOT = { has_war_with = PUK }
+				}
 				declare_war_on = {
 					target = PUK
 					type = annex_everything
