@@ -2,6 +2,7 @@
 2000.1.1 = {
 	set_country_flag = is_civil_war_faction
 	set_variable = { civil_war_original_tag = LEB.id }
+	set_country_flag = AS_disabled_arab_spring
 	if = {
 		limit = { has_dlc = "No Step Back" }
 
