@@ -1100,6 +1100,8 @@
  syria_return_of_npf_parliamentarians_desc: "In a bid to treat the institutional inefficiency the government has brought back parliamentarians who served the country. Now free from assad's totalitarian constrants they feel more able to implement changes and carry on their duties. However it's important to note that no true change has been made and on the long while the problems of inefficiency are still present, but the country is stable and able for now"
  syria_entrenched_theocracy: "Entrenched Theocracy"
  syria_entrenched_theocracy_desc: "Syria has implemented theocratic solutions to the institutional problems it has always suffered. On one hand, this has lead to religious moral values inducing slight improvements in tackling corruption but the core problems haven't been solved, nepotism and sectarianism still persist since not all Syrians feel that the government is representative of them, and more problems are awaiting to inevitably reveal their ugly heads. But for now, the people are quiet and things seem stable"
+ FSA_rebel_fighting_spirit_idea: "Rebel Fighting Spirit"
+ FSA_rebel_fighting_spirit_idea_desc: "The Free Syrian Army has started with a fighting spirit and are ready to fight against the Al-Assad regime. They are ready to fight for the freedom of the country and for the rights of the people."
 
  #Unique Internal Factions
  SYR_the_military: "Syrian Arab Army"
