@@ -793,6 +793,11 @@
  RULE_ENABLE_INVESTMENT_COLLAPSE_LOCK_NO_DESC: "You can send investments to countries while you have the \"Bankruptcy Incoming\" mission active"
  RULE_ENABLE_INVESTMENT_COLLAPSE_LOCK_YES_DESC: "You can no longer send investments to countries while you have the \"Bankruptcy Incoming\" mission active"
 
+ # Syria Arab Spring Historical Civil War
+ RULE_SYRIA_ARAB_SPRING_CHOICE_DEFAULT_DESC: "Syria will evaluate the Arab Spring option as normal."
+ RULE_SYRIA_ARAB_SPRING_CHOICE_HISTORICAL_CIVIL_WAR_DESC: "Syria will ensure that they take the choices if the Arab Spring comes up to force the historical civil war."
+ RULE_SYRIA_ARAB_SPRING_CHOICE_HISTORICAL_ISIS_SPAWN_DESC: "Syria will always take the choices during the Arab Spring to guarantee the historical Islamic State (ISIS) spawn. This also guarantees the historical civil war will occur."
+
  # FOREIGN POLICY
  RULE_ALLOW_RECALL_INTERVENTION_FORCES: "Allow Recalling of Intervention Forces"
  RULE_YES_ALLOW_INTERVENTION_FORCES: "§YNOTE: This is not balanced and is just a temp measure for doing whatever you want. Any issues with volunteers and otherwise are not our concern.§! Allows you to recall Intervention Forces from countries.\n"
