@@ -538,6 +538,10 @@
 
  ISI_jihadist_islamic_state: "Jihadist Islamic State"
  ISI_jihadist_islamic_state_desc: "[ISI.GetNamewithFlag] has rallied and the Caliphate remains strong. It is time to jihad against the infidels and end their puny existence!"
+ ISI_islamic_state_early_offensive_idea: "Early Islamic State Offensive"
+ ISI_islamic_state_early_offensive_idea_desc: "The Islamic State has started the offensive in Syria and Iraq."
+ ISI_islamic_state_failure_idea: "Failure to Defend Against the Islamic State"
+ ISI_islamic_state_failure_idea_desc: "The Caliphate has launched their offensive and we are not prepared to defend against them. We need to strengthen our defenses and prepare for the worst."
 
  #Outside Political Influences
  major_western_influence: "Major Western Influence"
