@@ -13,10 +13,12 @@ v1.12.1
  Balance:
   - Increased the penalties for taking the "Nuclear Power (Offensive)"
   - Increased the cost of Enosis for the Greek decision from 50 to 150
+  - Increased the starting strength of the Islamic State and the Free Syrian Army when it spawns
 
  Bugfix:
   - Fixed the Italian focus "Relinquish Power to the Pope" not properly transferring subjects to the Holy See
   - Fixed being able to send yourself "Bailouts" if you have somehow become an influencer of yourself
+  - Fixed the Nigerian mission "Religious Civil War" not properly concluding when you have converted everything
 
  Content:
   - NEW FOCUS TREE: Netherlands
@@ -24,6 +26,9 @@ v1.12.1
   - Influence Economic Aid now no longer requires you to be a top 7 influencer and you can send aid to other countries
   - Moved the political power costs for the Greek decisions from the effect to the cost trigger so they actually show their cost
   - Reworked the Arab Spring mechanics to be more robust and enjoyable to play
+
+ Game Rules:
+  - Added two new custom game rules for Syria to allow you to force the historical civil war from the Arab Spring as well as the Islamic State spawn
 
 v1.12.0d
 
